tests/miniJava/neg/006729_mutation.MiniJava
class java { public true void Main ( String [ ] java ) { { } } }
